[gd_scene load_steps=10 format=3 uid="uid://b8yu7c66jgymi"]

[ext_resource type="Script" path="res://Scripts/Monsters/FlyingMob.gd" id="1_lmru2"]
[ext_resource type="Texture2D" uid="uid://cm75n67mvqk8h" path="res://Assets/Characters/tile_0025.png" id="2_powsh"]
[ext_resource type="Texture2D" uid="uid://bjxe4jnfleq16" path="res://Assets/Characters/tile_0024.png" id="3_jxm6j"]
[ext_resource type="Texture2D" uid="uid://f6vc20d13hbw" path="res://Assets/Characters/tile_0026.png" id="4_aj6uv"]
[ext_resource type="AudioStream" uid="uid://brgdfh2lxqiio" path="res://Assets/Audio/kill-enemy.ogg" id="4_csutu"]

[sub_resource type="SpriteFrames" id="SpriteFrames_p0tv3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_powsh")
}, {
"duration": 1.0,
"texture": ExtResource("3_jxm6j")
}, {
"duration": 1.0,
"texture": ExtResource("2_powsh")
}, {
"duration": 1.0,
"texture": ExtResource("4_aj6uv")
}],
"loop": true,
"name": &"Fly",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ycyqk"]
radius = 4.0
height = 8.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ycuiq"]
size = Vector2(12, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pw3yt"]
size = Vector2(14, 6)

[node name="FlyingMob" type="CharacterBody2D"]
script = ExtResource("1_lmru2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_p0tv3")
animation = &"Fly"
autoplay = "Fly"
frame_progress = 0.179643

[node name="BodyCollider" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_ycyqk")

[node name="GroundCheck" type="RayCast2D" parent="."]
target_position = Vector2(0, 8)

[node name="WallCheck" type="RayCast2D" parent="."]
target_position = Vector2(-12, 0)

[node name="DeathAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_csutu")

[node name="HeadDamage" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HeadDamage"]
position = Vector2(0, -3)
shape = SubResource("RectangleShape2D_ycuiq")

[node name="PlayerDamage" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDamage"]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_pw3yt")

[connection signal="finished" from="DeathAudio" to="." method="_on_death_audio_finished"]
[connection signal="body_entered" from="HeadDamage" to="." method="_on_head_damage_body_entered"]
[connection signal="body_entered" from="PlayerDamage" to="." method="_on_player_damage_body_entered"]
